Using Hamcrest AssertThat instead of deprecated Junit wrapper method